# eth-api-payments

./: .gitignore  README.md  test-websocket.js
analytics-dashboard/: DATA_FLOW_GUIDE.md  DEPLOYMENT_GUIDE.md  SUBSTREAMS_MIGRATION_PLAN.md  test-integration.sh
analytics-dashboard/substream-integration/: .env.example  .gitignore  Cargo.toml  ESCROW_README.md  README.md  TESTING_CHECKLIST.md  build.rs  build.sh  package-lock.json  package.json  substream.yaml  substreams.yaml  test-modules.js  test-real-connection.js  test-websocket.js  tsconfig.json
analytics-dashboard/substream-integration/proto/: escrow.proto  eth_payments.proto
analytics-dashboard/substream-integration/sink-service/: .env.example  package-lock.json  package.json  tsconfig.json
analytics-dashboard/substream-integration/sink-service/src/: server.ts  stream-consumer.ts  types.ts
analytics-dashboard/substream-integration/src/: index.js  index.ts  lib.rs
analytics-dashboard/substream-integration/src/config/: network.ts  substream.ts
analytics-dashboard/substream-integration/src/handlers/: MetricsHandler.ts  PaymentHandler.ts
analytics-dashboard/substream-integration/src/pb/: eth.escrow.v1.rs  mod.rs
analytics-dashboard/substream-integration/src/services/: GraphQLService.ts  SubstreamService.ts
analytics-dashboard/substream-integration/src/types/: index.ts  payment.ts  substream.ts
analytics-dashboard/substream-integration/src/utils/: helpers.ts  logger.ts
api-provider-backend/: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  dump.rdb  flush.js  package.json  (+3 more)
(+140 files in other folders)
